# cppTemplate

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  justfile
.github/workflows/: Unit Tests.yml
scripts/: Doxyfile  clean.sh  coverage.sh  documentation.sh  gcovr.cfg
src/: CMakeLists.txt  SourceFiles.cmake  main.cpp  sampleCode.hpp
test/: CMakeLists.txt  TestFiles.cmake  sampleTest.cpp
